# GitScriptor

./: .gitignore  FRONTEND_EXTENSION_COMPLETE.md  GitScriptor-Web-Ultimate-Spec.md  INTEGRATION_COMPLETE.md
GitScriptor-Web/: .env  .env.example  AUTHENTICATION_PERSISTENCE.md  README.md  docker-compose.yml
GitScriptor-Web/.github/workflows/: ci.yml
GitScriptor-Web/apps/api/: .env  API_DOCUMENTATION.md  DATABASE_SETUP.md  Dockerfile  GEMINI_SETUP.md  IMPLEMENTATION_STATUS.md  README.md  alembic.ini  migrate.py  pyproject.toml  setup_db.py  test_ai.py  test_gitscriptor.py
GitScriptor-Web/apps/api/src/: main.py
GitScriptor-Web/apps/api/src/alembic/: env.py
GitScriptor-Web/apps/api/src/alembic/versions/: 001_initial_schema.py
GitScriptor-Web/apps/api/src/auth/: crypto.py  dependencies.py
GitScriptor-Web/apps/api/src/db/: database.py  models.py
GitScriptor-Web/apps/api/src/middleware/: exception_handler.py  request_logger.py
GitScriptor-Web/apps/api/src/routers/: auth.py  generate.py  health.py  history.py  readme.py  repositories.py  search.py  status.py  templates.py  user.py
GitScriptor-Web/apps/api/src/schemas/: auth.py  error.py  job.py  readme.py  repository.py  template.py  user.py
GitScriptor-Web/apps/api/src/services/: generator.py  github.py  gitscriptor_core.py
GitScriptor-Web/apps/web-frontend/: .env  Dockerfile  OAUTH_FIX_README.md  index.html  package-lock.json  package.json  response.html
GitScriptor-Web/apps/web-frontend/public/: index.html
GitScriptor-Web/apps/web-frontend/src/: App.tsx  main.tsx  theme.tsx  vite-env.d.ts
(+34 files in other folders)
